objects/DMAPP__DM_Opportunity_Extra__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing Dealmaker attributes relating to an Opportunity. There should be exactly one of these for each Opportunity in the system.</description>
    <fields>
        <fullName>DMAPP__Account_Political_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Political Map</label>
        <referenceTo>DMAPP__Account_Political_Map__c</referenceTo>
        <relationshipLabel>Dealmaker Opportunities</relationshipLabel>
        <relationshipName>Dealmaker_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Active_Deal_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Deal Review</label>
        <referenceTo>DMAPP__Deal_Review__c</referenceTo>
        <relationshipLabel>Dealmaker Opportunities</relationshipLabel>
        <relationshipName>Dealmaker_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Assessment_Completeness__c</fullName>
        <description>Assessment Completeness Score</description>
        <label>Assessment Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Assessment_Count__c</fullName>
        <description>Count of questions answered for organisation on Assessment for reporting purposes</description>
        <label>Assessment Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Calculated_Close_Date__c</fullName>
        <formula>IF ( 
	DMAPP__Opportunity__r.IsClosed  || DMAPP__Is_Dealmaker_Opp__c = false , 
	IF (
		DMAPP__Opportunity__r.IsWon  || DMAPP__Is_Dealmaker_Opp__c = false, 
		DMAPP__Opportunity__r.CloseDate, 
		null
	),
	IF (
			NULLVALUE (DMAPP__Pause_Date__c,  DATEVALUE(NOW())) &gt; DATEVALUE(NOW()), 
			DMAPP__Pause_Date__c  +  (NULLVALUE(DMAPP__Weeks_To_Close__c, 0) * 7), 
			DATEVALUE(NOW())  +  (NULLVALUE(DMAPP__Weeks_To_Close__c, 0) * 7)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Calculated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Collaberation_Map_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaboration Map Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collaberation_Map_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Collaberation_Map_Last_Chatted_Time__c</fullName>
        <label>Collaboration Map Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Collaboration_Map_Completeness__c</fullName>
        <description>Completeness score for Collaboration Map</description>
        <label>Collaboration Map Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Collaboration_Map_Count__c</fullName>
        <description>Count of nodes on Collaboration Map for reporting purposes</description>
        <inlineHelpText>Count of nodes on Collaboration Map for reporting purposes</inlineHelpText>
        <label>Collaboration Map Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Completed_Review_Count__c</fullName>
        <label>Completed Review Count</label>
        <summaryFilterItems>
            <field>DMAPP__Deal_Review__c.DMAPP__Is_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__Deal_Review__c.DMAPP__Dealmaker_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Deal_Review_Status__c</fullName>
        <formula>IF( ISBLANK( DMAPP__Active_Deal_Review__c ) , &apos;&apos;, DMAPP__Active_Deal_Review__r.DMAPP__Status__c)</formula>
        <label>Deal Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Dealmaker_Completeness__c</fullName>
        <description>Simple average of completeness scores.</description>
        <formula>(if(
  $Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Assessment__c ||
  $Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Collaboration_Map__c ||
  $Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Decision_Criteria__c ||
  $Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Political_Map__c ||
  $Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Prime_Actions__c ||
  $Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Competitive_Strategy__c,
(DMAPP__Assessment_Completeness__c * 0.3) + (DMAPP__Collaboration_Map_Completeness__c * 0.15) + (DMAPP__Decision_Criteria_Completeness__c * 0.15) + (DMAPP__Political_Map_Completeness__c * 0.2) + (DMAPP__PRIME_Completeness__c * 0.05) + (DMAPP__Strategy_Completeness__c * 0.15) /
(if($Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Assessment__c,0.3,0) + if($Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Collaboration_Map__c,0.15,0) + if($Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Decision_Criteria__c,0.15,0) + if($Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Political_Map__c,0.2,0) + if($Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Prime_Actions__c,0.05,0) + if($Setup.DMAPP__Dealmaker_Smart_OM_Settings__c.DMAPP__Show_Competitive_Strategy__c,0.15,0))
, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealmaker Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Decision_Criteria_Completeness__c</fullName>
        <description>Decision Criteria Completeness Score</description>
        <label>Decision Criteria Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Decision_Criteria_Count__c</fullName>
        <description>Count of Decision Criteria for reporting purposes</description>
        <label>Decision Criteria Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Decision_Criteria_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Criteria Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Decision_Criteria_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Decision_Criteria_Last_Chatted_Time__c</fullName>
        <label>Decision Criteria Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Effective_Strategy_Description__c</fullName>
        <label>Effective Strategy Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Effective_Strategy_Details_Text__c</fullName>
        <label>Effective Strategy Details Text</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Effective_Strategy__c</fullName>
        <formula>IF(DMAPP__Use_Recommended__c, IF(TEXT(DMAPP__Recommended_Strategy__c) != null,
      TEXT(DMAPP__Recommended_Strategy__c), &apos;Unknown&apos;),
      IF(TEXT(DMAPP__User_Defined_Strategy__c) != null, TEXT(DMAPP__User_Defined_Strategy__c),
      &apos;Unknown&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Strategy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Forecast_Closed_Projected_Amount__c</fullName>
        <formula>IF ( DMAPP__Opportunity__r.IsClosed == false &amp;&amp; DMAPP__Qualification_Projected__c &gt; 0, DMAPP__Opportunity_Amount__c + IF(DMAPP__Opportunity__r.IsWon, DMAPP__Opportunity_Amount__c, 0), 0 + IF(DMAPP__Opportunity__r.IsWon, DMAPP__Opportunity_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Closed Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Forecast_Lost_Amount__c</fullName>
        <formula>IF(DMAPP__Opportunity__r.IsClosed, IF(DMAPP__Opportunity__r.IsWon, 0, DMAPP__Opportunity_Amount__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Lost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Forecast_Open_Amount__c</fullName>
        <formula>IF(DMAPP__Opportunity__r.IsClosed, 0, DMAPP__Opportunity_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Forecast_Pebble_Amount__c</fullName>
        <formula>IF (DMAPP__Mix__c = 3, DMAPP__Opportunity_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Pebble Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Forecast_Projected_Amount__c</fullName>
        <formula>IF ( DMAPP__Opportunity__r.IsClosed == false &amp;&amp; DMAPP__Qualification_Projected__c &gt; 0, DMAPP__Opportunity_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Forecast_Rock_Amount__c</fullName>
        <formula>IF (DMAPP__Mix__c = 1, DMAPP__Opportunity_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Rock Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Forecast_Stone_Amount__c</fullName>
        <formula>IF (DMAPP__Mix__c = 2, DMAPP__Opportunity_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Stone Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Forecast_Unprojected_Amount__c</fullName>
        <formula>IF ( DMAPP__Qualification_Projected__c &gt; 0, 0, If(DMAPP__Opportunity__r.IsClosed, 0,DMAPP__Opportunity_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Unprojected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Forecast_Won_Amount__c</fullName>
        <formula>IF(DMAPP__Opportunity__r.IsWon, DMAPP__Opportunity_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Won Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Health__c</fullName>
        <formula>IF(DMAPP__Opportunity__r.IsWon,
	1,
	IF(DMAPP__Pause_Date__c&gt;=TODAY(),
		0,
		IF (DMAPP__Opportunity__r.LastModifiedDate &gt; LastModifiedDate,
			IF (DMAPP__Opportunity__r.LastModifiedDate &gt; Now() - 30, 
				1,
				IF (DMAPP__Opportunity__r.LastModifiedDate &gt; Now() - 60,
					2,
					3
				)
			),
			IF (LastModifiedDate &gt; Now() - 30, 
				1,
				IF (LastModifiedDate &gt; Now() - 60,
					2,
					3
				)
			)			
		)
	)
)</formula>
        <label>Health</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Dealmaker_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dealmaker Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Last_Updated__c</fullName>
        <formula>IF (DMAPP__Opportunity__r.LastModifiedDate &gt; LastModifiedDate, DMAPP__Opportunity__r.LastModifiedDate, LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestones_Answer_Count__c</fullName>
        <label>Milestones Answer Count</label>
        <summaryFilterItems>
            <field>DMAPP__DM_Milestone_Opportunity_Answer__c.DMAPP__Milestone_Question_Option__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__DM_Milestone_Opportunity_Answer__c.DMAPP__Dealmaker_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestones_Completeness__c</fullName>
        <description>Milestones Completeness Percentage = (Milestones Count / Milestones Total) * 100</description>
        <formula>if ( DMAPP__Milestones_Answer_Count__c == null || DMAPP__Milestones_Answer_Count__c == 0|| DMAPP__Milestones_Total__c == null || DMAPP__Milestones_Total__c == 0, 0,
(
 (DMAPP__Milestones_Answer_Count__c / DMAPP__Milestones_Total__c ) * 100
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Milestones Completeness Percentage = (Milestones Count / Milestones Total) * 100</inlineHelpText>
        <label>DEPRECATED Milestones Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestones_Count__c</fullName>
        <description>The number of Milestones questions which have been answered</description>
        <inlineHelpText>The number of Milestones questions which have been answered</inlineHelpText>
        <label>DEPRECATED Milestones Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestones_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestones Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dealmaker_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestones_Last_Chatted_Time__c</fullName>
        <label>Milestones Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestones_Score__c</fullName>
        <label>Milestones Score</label>
        <summarizedField>DMAPP__DM_Milestone_Opportunity_Answer__c.DMAPP__Score__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_Milestone_Opportunity_Answer__c.DMAPP__Dealmaker_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestones_Total__c</fullName>
        <description>Milestones Total number of questions</description>
        <inlineHelpText>Milestones Total number of questions</inlineHelpText>
        <label>DEPRECATED Milestones Total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Mix__c</fullName>
        <formula>if ( DMAPP__Opportunity_Amount__c == null || DMAPP__Sales_Process__c == null, -1,
If	(
	NULLVALUE(DMAPP__Opportunity_Amount__c, 0) &gt;= DMAPP__Sales_Process__r.DMAPP__Rock_Value__c,
	1,
	IF	(
		NULLVALUE(DMAPP__Opportunity_Amount__c, 0) &lt; DMAPP__Sales_Process__r.DMAPP__Pebble_Value__c,
		3,
		2
	)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mix</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity_Amount__c</fullName>
        <formula>IF( ISBLANK($Setup.DMAPP__Dealmaker_Playbook_Settings__c.DMAPP__Opp_Amount_Field__c),  DMAPP__Opportunity__r.Amount ,  DMAPP__Amount__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Dealmaker Opportunities</relationshipLabel>
        <relationshipName>DM_Opportunity_Extras</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__PRIME_Completeness__c</fullName>
        <description>PRIME Completeness Score</description>
        <label>PRIME Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__PRIME_Count__c</fullName>
        <description>Count of open PRIME actions for reporting purposes</description>
        <label>PRIME Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__PRIME_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRIME Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PRIME_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__PRIME_Last_Chatted_Time__c</fullName>
        <label>PRIME Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Pause_Date__c</fullName>
        <label>Qualification Pause Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Map_Completeness__c</fullName>
        <description>Political Map Completeness Score</description>
        <label>Political Map Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Map_Count__c</fullName>
        <description>Count of nodes on Political Map for reporting purposes</description>
        <label>Political Map Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Map_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Political Map Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Political_Map_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Map_Last_Chatted_Time__c</fullName>
        <label>Political Map Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Probability__c</fullName>
        <label>Qualification  Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Qualification_Dirty__c</fullName>
        <formula>IF (
	DMAPP__Qualification_Sales_Process_Type_Stamp__c  &lt;&gt; DMAPP__Sales_Process__c, 
	1, 
	IF (
		DMAPP__Qualification_Sales_Process_Ver_Stamp__c  &lt;&gt; DMAPP__Sales_Process__r.DMAPP__Version__c, 
		1, 
		0
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification_Dirty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Qualification_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualification Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dealmaker_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Qualification_Last_Chatted_Time__c</fullName>
        <label>Qualification Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Qualification_Progress__c</fullName>
        <label>Qualification Progress</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Qualification_Projected__c</fullName>
        <formula>IF(
	DMAPP__Opportunity__r.IsClosed == true,
	IF(DMAPP__Opportunity__r.IsWon, 1, 0),
	IF(DMAPP__Probability__c &gt;=DMAPP__Sales_Process__r.DMAPP__Threshold__c &amp;&amp; DMAPP__Probability__c &gt; 0, 1, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Projected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Qualification_Sales_Process_Type_Stamp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Qualification Sales Process Type Stamp</label>
        <referenceTo>DMAPP__DM_Sales_Process__c</referenceTo>
        <relationshipLabel>Dealmaker Opportunities (Qualification Sales Process Type Stamp)</relationshipLabel>
        <relationshipName>Dealmaker_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Qualification_Sales_Process_Ver_Stamp__c</fullName>
        <label>Qualification Sales Process Ver Stamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Qualification_Stage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Qualification Stage</label>
        <referenceTo>DMAPP__DM_Stage_Extra__c</referenceTo>
        <relationshipLabel>Dealmaker Opportunities</relationshipLabel>
        <relationshipName>Dealmaker_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Recommended_Strategy__c</fullName>
        <label>Recommended Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frontal</fullName>
                </value>
                <value>
                    <fullName>Flanking</fullName>
                </value>
                <value>
                    <fullName>Fragment</fullName>
                </value>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Disengage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Sales_Process_Name__c</fullName>
        <description>Qualification Sales Process Name</description>
        <inlineHelpText>Qualification Sales Process Name</inlineHelpText>
        <label>Qualification Sales Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sales_Process_Stage_Name__c</fullName>
        <description>Qualification Sales Process Stage Name</description>
        <inlineHelpText>Qualification Sales Process Stage Name</inlineHelpText>
        <label>Qualification Sales Process Stage Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sales_Process_Stage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Qualification Sales Process Stage</label>
        <referenceTo>DMAPP__DM_Sales_Process_Stage__c</referenceTo>
        <relationshipLabel>Dealmaker Opportunities</relationshipLabel>
        <relationshipName>Dealmaker_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sales_Process__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Qualification Sales Process</label>
        <referenceTo>DMAPP__DM_Sales_Process__c</referenceTo>
        <relationshipLabel>Dealmaker Opportunities</relationshipLabel>
        <relationshipName>Dealmaker_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy_Completeness__c</fullName>
        <description>Strategy Completeness Score</description>
        <label>Strategy Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategy_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy_Last_Chatted_Time__c</fullName>
        <label>Strategy Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__TAS_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TAS Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TAS_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__TAS_Last_Chatted_Time__c</fullName>
        <label>TAS Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__TCS_Q1__c</fullName>
        <inlineHelpText>Is there a compelling event or can you create one?</inlineHelpText>
        <label>TCS_Q1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__TCS_Q2__c</fullName>
        <inlineHelpText>Can you compete?</inlineHelpText>
        <label>TCS_Q2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__TCS_Q3__c</fullName>
        <inlineHelpText>Do you have a 3:1 advantage?</inlineHelpText>
        <label>TCS_Q3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Use_Recommended__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__User_Defined_Strategy__c</fullName>
        <label>User Defined Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frontal</fullName>
                </value>
                <value>
                    <fullName>Flanking</fullName>
                </value>
                <value>
                    <fullName>Fragment</fullName>
                </value>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Disengage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Weeks_To_Close__c</fullName>
        <label>Qualification Weeks To Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Worked_in_DM__c</fullName>
        <formula>OR (DMAPP__Worked_in_OM__c, DMAPP__Worked_in_Playbook__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worked in DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Worked_in_OM__c</fullName>
        <formula>DMAPP__Dealmaker_Completeness__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worked in OM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Worked_in_Playbook__c</fullName>
        <formula>DMAPP__Probability__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worked in Playbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Received__c</fullName>
        <label>Title Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dealmaker Opportunity</label>
    <nameField>
        <label>Dealmaker Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>